--- a/menu/style.css
+++ b/menu/style.css
@@ -16,13 +16,14 @@ header {
     width: 50px;
     height: 50px;
     margin-right: 10px;
+    border-radius: 25%;
 }
 
 h1 {
     font-size: 24px;
     font-weight: bold;
     color: #333;
-    margin: 0;
+    margin: 15px;
 }
 
 nav ul {
