--- a/quest/style.css
+++ b/quest/style.css
@@ -7,7 +7,12 @@ header {
   background-color: #fff;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 }
-
+h1 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  margin: 15px;
+}
 .logo {
   display: flex;
 }
@@ -16,6 +21,7 @@ header {
   width: 50px;
   height: 50px;
   margin-right: 10px;
+  border-radius: 25%;
 }
 
 nav ul {
@@ -115,7 +121,7 @@ nav a {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
-  font-size: 40px;
+  font-size: 35px;
 }
 
 #choices {
@@ -137,7 +143,7 @@ nav a {
   border-radius: 5px;
   padding: 10px 20px;
   margin-top: 10px;
-  font-size: 18px;
+  font-size: 15px;
   cursor: pointer;
 }
 
@@ -154,4 +160,8 @@ nav a {
   border-radius: 5px; 
   color:black;
   font-size: 40px;
+}
+a {
+  color:#000000;
+  text-decoration: none;
 }
